--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <meta name="description" content="Estudio de Arquitectura y Construcción ubicado en Argentina.">
+        <meta name="keywords" content="arquitectura, construcción, vivenda, ampliación">
+        <meta name="robots" content="index, follow">
+        <meta property="og:title" content="">
+        <meta property="og:description" content="">
+        <title>Estudio Landers - Arquitectura y Construcción</title>
+        <link rel= "shortcut icon" href="" type="image/x-icon">
         <link rel="stylesheet" href="https://use.typekit.net/aru5mhy.css">
         <link rel="stylesheet" href="./css/styles.css">
     </head>
@@ -80,9 +86,3 @@
         </footer>
     </body>
 </html>
-
-
-<!--AQUI ENCONTRARAS MI PROYECTO RELACIONADO A LA ARQUITECTURA UASNDO BOOTSTRAP
-
-
--->
