--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Estudio de Arquitectura y Construcción ubicado en Argentina.">
-        <meta name="keywords" content="arquitectura, construcción, vivenda, ampliación">
+        <meta name="description" content="Estudio líder en arquitectura y construcción, especializado en soluciones de diseño modernas y sostenibles para espacios residenciales y comerciales.">
+        <meta name="keywords" content="arquitectura, construcción, diseño sostenible, arquitectura moderna, proyectos residenciales, proyectos comerciales, estudio de arquitectura, argentina, patagonia, interiorismo, diseño eficiente">
         <meta name="robots" content="index, follow">
-        <meta property="og:title" content="">
-        <meta property="og:description" content="">
+        <meta property="og:title" content="Landers | Estudio de Arquitectura y Construcción Innovador">
+        <meta property="og:description" content="Diseñamos y construimos arquitectura viva, desde la concepción hasta los últimos detalles. Conoce nuestros servicios integrales de arquitectura, interiorismo, construcción y modelado 3D.">
+        <meta property="og:image" content="https://">
+        <meta property="og:url" content="https://">
         <title>Estudio Landers - Arquitectura y Construcción</title>
         <link rel= "shortcut icon" href="" type="image/x-icon">
         <link rel="stylesheet" href="https://use.typekit.net/aru5mhy.css">
