--- a/pages/nostrosPage.html
+++ b/pages/nostrosPage.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Conoce al equipo de Landers, un estudio de arquitectura y construcción dedicado a ofrecer soluciones innovadoras, sostenibles y adaptadas a tus necesidades.">
+    <meta name="keywords" content="estudio de arquitectura, equipo de arquitectos, servicios de arquitectura, arquitectura sostenible, diseño arquitectónico, proyectos de construcción, arquitectura en Beunos Aires, Argentina, sobre nosotros">
+    <meta name="robots" content="index, follow">
+    <title>Nuestro equipo de Profesionales</title>
     <link rel="stylesheet" href="https://use.typekit.net/aru5mhy.css">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
@@ -71,8 +74,7 @@
                 </div>
                 <div>
                     <div class="descrubreS">
-                        <a href="../pages/serviciosPage.html">Descubre nuestros servicios</a>
-                        <img src="../assets/img/flecha.png" alt="arrow icon">
+                        <a href="../pages/serviciosPage.html">Descubre nuestros servicios +</a>
                     </div>
                 </div>
             </section>
