--- a/pages/proyectoSilos.html
+++ b/pages/proyectoSilos.html
@@ -3,7 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <meta name="description" content="Silos es una casa diseñada para vivirse en la intersección entre el interior y el exterior, con una propuesta arquitectónica donde el entorno natural se integra y se convierte en parte esencial del diseño. Su nombre encapsula la esencia misma del proyecto.">
+        <meta name="keywords" content="proyecto arquitectónico, residencial, diseño de unidad, estudio de arquitectura en Buenos Aires, construcción sostenible, arquitectura moderna">
+        <meta name="robots" content="index, follow">
+        <title>Silos Construcción Sustentable y Eficiente</title>
         <link rel="stylesheet" href="https://use.typekit.net/aru5mhy.css">
         <link rel="stylesheet" href="../css/styles.css">
     </head>
