--- a/pages/proyectosPage.html
+++ b/pages/proyectosPage.html
@@ -3,7 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <meta name="description" content="Explora los proyectos de arquitectura de [Nombre del Estudio]. Desde residenciales hasta comerciales, descubre diseños modernos y sostenibles.">
+        <meta name="keywords" content="proyectos de arquitectura, arquitectura moderna, proyectos residenciales, proyectos comerciales, arquitectura sostenible, estudio de arquitectura, diseño arquitectónico, construcción en Argentina">
+        <meta name="robots" content="index, follow">
+        <title>Proyectos de Arquitectura y Sustentabilidad</title>
         <link rel="stylesheet" href="https://use.typekit.net/aru5mhy.css">
         <link rel="stylesheet" href="../css/styles.css">
     </head>
