--- a/pages/serviciosPage.html
+++ b/pages/serviciosPage.html
@@ -3,7 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <meta name="description" content="En nuestro estudio creemos en la arquitectura viva; una visión integral donde la arquitectura y el interiorismo se complementan mutuamente.">
+        <meta name="keywords" content="construcción de espacios comerciales, diseño de interiores para tiendas, renovación de oficinas, diseño arquitectónico 3D, modelado BIM para arquitectura, planificación urbana, diseño de interiores y exteriores, arquitectura sostenible, edificios de bajo consumo, construcción con materiales sostenibles, eficiencia energética en edificios, diseño ecológico">
+        <meta name="robots" content="index, follow">
+        <title>Somos Construcción, Interiorismo y Arquitectura</title>
         <link rel="stylesheet" href="https://use.typekit.net/aru5mhy.css">
         <link rel="stylesheet" href="../css/styles.css">
     </head>
